<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">irkksome</string>
    <string name="title_activity_chat">irkksome</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="send_message">Send message</string>
    <string name="join_server">Join server</string>
    <string name="join_channel">Join channel</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_hostname">Hostname</string>
    <string name="hint_connect">Connect</string>
    <string name="leave_channel">Leave channel</string>
    <string name="change_nick">Change nick</string>
    <string name="hint_nickname">Nickname</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="notification_no_servers">You\'re not connected to any channels on this server!</string>
    <string name="hint_motd">Message of the day (click to see full)</string>
    <string name="title_connect_to_server">New connection</string>
    <string name="category_hint_connect_new_server">Connect to a new server</string>
    <string name="hint_realname">Realname</string>
    <string name="hint_sshHost">SSH hostname</string>
    <string name="hint_sshUser">SSH username</string>
    <string name="hint_sshPass">SSH password</string>
    <string name="connect_ssh_checkbox">SSH settings</string>
    <string name="hint_username">Username</string>
    <string name="hint_port">Port</string>
    <string name="hint_password">Password</string>
    <string name="connection_type_regular">Regular irkk</string>
    <string name="connection_type_irssi">Irssi proxy</string>
    <string name="use_pubkey_auth">Use pubkey authentication</string>
    <string name="title_manage_pubkeys">Manage pubkeys</string>

</resources>
