<?xml version="1.0" encoding="utf-8"?>

<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/server_connect_host"
        android:hint="@string/hint_hostname"
        android:inputType="textUri" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/server_connect_port"
        android:hint="@string/hint_port"
        android:inputType="number" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/server_connect_username"
        android:hint="@string/hint_username"
        android:inputType="textUri" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/server_connect_password"
        android:hint="@string/hint_password"
        android:inputType="textPassword" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/server_connect_sshHost"
        android:hint="@string/hint_sshHost"
        android:inputType="textUri" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/server_connect_sshUser"
        android:hint="@string/hint_sshUser"
        android:inputType="textUri" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/server_connect_sshPass"
        android:hint="@string/hint_sshPass"
        android:inputType="textPassword" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_pubkey_auth"
        android:id="@+id/server_connect_use_pubkey"/>
</merge>

