<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/server_connect_host"
        android:hint="@string/hint_hostname"
        android:inputType="textUri"
        android:text="localhost" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/server_connect_nickname"
        android:hint="@string/hint_nickname"
        android:text="oed"
        android:inputType="textUri" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/server_connect_realname"
        android:hint="@string/hint_realname"
        android:text="banned"
        android:inputType="textUri" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/server_connect_username"
        android:hint="@string/hint_username"
        android:text="oed"
        android:inputType="textUri" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/server_connect_password"
        android:hint="@string/hint_password"
        android:inputType="textPassword" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/server_connect_port"
        android:hint="@string/hint_port"
        android:text="50001"
        android:inputType="number" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect_ssh_checkbox"
        android:id="@+id/server_connect_use_ssh" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/server_connect_sshHost"
        android:hint="@string/hint_sshHost"
        android:text="hubben.chalmers.it"
        android:inputType="textUri" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/server_connect_sshUser"
        android:hint="@string/hint_sshUser"
        android:text="joelto"
        android:inputType="textUri" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/server_connect_sshPass"
        android:hint="@string/hint_sshPass"
        android:inputType="textPassword" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_connect"
        android:id="@+id/server_connect_button"
        android:layout_gravity="center_horizontal" />
    <ProgressBar
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateBehavior="repeat"
        android:visibility="invisible"
        android:id="@+id/server_connect_progressbar"/>
</LinearLayout>