<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context=".ui.fragment.RegularConnectionFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            style="@style/new_connection_icon"
            android:background="@drawable/connection_icon_blue"
            android:id="@+id/server_connect_icon" />

        <TextView
            style="@style/list_item"
            android:text="@string/connection_type_regular"
            android:layout_centerInParent="true"
            android:layout_toRightOf="@id/server_connect_icon"/>
    </RelativeLayout>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/server_connect_host"
        android:hint="@string/hint_hostname"
        android:inputType="textUri" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/server_connect_port"
        android:hint="@string/hint_port"
        android:inputType="number" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/server_connect_nickname"
        android:hint="@string/hint_nickname"
        android:inputType="textUri" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/server_connect_realname"
        android:hint="@string/hint_realname"
        android:inputType="textUri" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/server_connect_username"
        android:hint="@string/hint_username"
        android:inputType="textUri" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/server_connect_password"
        android:hint="@string/hint_password"
        android:inputType="textPassword" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_connect"
        android:id="@+id/server_connect_button" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:id="@+id/server_connect_progress"/>
</LinearLayout>
